--- a/index.html
+++ b/index.html
@@ -79,6 +79,20 @@
                 <p><strong>Technologies:</strong> PHP (Laravel), Vue.js</p>
             </div>
 
+            <!-- Project 7: ECommerce MERN Stack -->
+            <div class="bg-white p-6 rounded-lg shadow-lg">
+                <h3 class="text-2xl font-bold mb-2">ECommerce MERN Stac (Personal Project)k</h3>
+                <p class="text-gray-600 mb-4">A full-stack eCommerce platform developed using the MERN stack (MongoDB, Express, React, Node.js) with user authentication, product management, and payment gateway integration.</p>
+                <p><strong>Technologies:</strong> MongoDB, Express, React, Node.js</p>
+            </div>
+
+            <!-- Project 8: Decentralized News Portal System -->
+            <div class="bg-white p-6 rounded-lg shadow-lg">
+                <h3 class="text-2xl font-bold mb-2">Decentralized News Portal System (MSc Final Project)</h3>
+                <p class="text-gray-600 mb-4">A Web3 decentralized news platform with blockchain-based authentication, smart contract governance, token rewards, and decentralized storage using IPFS and Pinata.</p>
+                <p><strong>Technologies:</strong> Next.js, Node.js, Solidity, IPFS, Ethereum</p>
+            </div>
+
         </div>
     </section>
 
