--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <header class="bg-gradient-to-r from-purple-500 to-blue-600 text-white py-16 text-center">
         <h1 class="text-4xl font-bold mb-2">Md Mazharul Parash</h1>
         <h2 class="text-2xl font-semibold mb-4">Full Stack Developer | Web Developer</h2>
-        <p class="text-lg max-w-2xl mx-auto mb-6">I specialize in developing modern web applications with React, Vue.js, Laravel, and more.</p>
+        <p class="text-lg max-w-2xl mx-auto mb-6">I specialize in developing modern web applications with React, Vue.js, Laravel, Node.js and more.</p>
     </header>
 
     <!-- About Me Section -->
     <section id="about" class="py-16 px-8 bg-white text-center">
         <h2 class="text-3xl font-bold mb-4">About Me</h2>
-        <p class="text-lg max-w-2xl mx-auto mb-6">I am a passionate web developer with experience in frontend and backend development. I have worked with various technologies such as React, Vue.js, Laravel, and more to create dynamic and efficient web applications.</p>
+        <p class="text-lg max-w-2xl mx-auto mb-6">I am a passionate web developer with experience in frontend and backend development. I have worked with various technologies such as React, Vue.js, Laravel, Node.js and more to create dynamic and efficient web applications.</p>
         <h3 class="text-xl font-semibold mb-4">Skills</h3>
         <ul class="flex flex-wrap justify-center gap-4">
-            <li class="bg-purple-100 text-purple-600 px-4 py-2 rounded-full">JavaScript (React, Vue.js, Next.js)</li>
+            <li class="bg-purple-100 text-purple-600 px-4 py-2 rounded-full">JavaScript (React, Vue.js, Node.js)</li>
             <li class="bg-purple-100 text-purple-600 px-4 py-2 rounded-full">PHP (Laravel, Codeigniter)</li>
             <li class="bg-purple-100 text-purple-600 px-4 py-2 rounded-full">Web3 & Blockchain Development</li>
             <li class="bg-purple-100 text-purple-600 px-4 py-2 rounded-full">HTML, CSS, SASS</li>
