--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
             <!-- Project 7: ECommerce MERN Stack -->
             <div class="bg-white p-6 rounded-lg shadow-lg">
-                <h3 class="text-2xl font-bold mb-2">ECommerce MERN Stac (Personal Project)k</h3>
+                <h3 class="text-2xl font-bold mb-2">ECommerce MERN Stack (Personal Project)</h3>
                 <p class="text-gray-600 mb-4">A full-stack eCommerce platform developed using the MERN stack (MongoDB, Express, React, Node.js) with user authentication, product management, and payment gateway integration.</p>
                 <p><strong>Technologies:</strong> MongoDB, Express, React, Node.js</p>
             </div>
