--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <h3 class="text-xl font-semibold mb-4">Skills</h3>
         <ul class="flex flex-wrap justify-center gap-4">
             <li class="bg-purple-100 text-purple-600 px-4 py-2 rounded-full">JavaScript (React, Vue.js, Node.js)</li>
+            <li class="bg-purple-100 text-purple-600 px-4 py-2 rounded-full">TypeScript</li>
             <li class="bg-purple-100 text-purple-600 px-4 py-2 rounded-full">PHP (Laravel, Codeigniter)</li>
             <li class="bg-purple-100 text-purple-600 px-4 py-2 rounded-full">Web3 & Blockchain Development</li>
             <li class="bg-purple-100 text-purple-600 px-4 py-2 rounded-full">HTML, CSS, SASS</li>
@@ -53,7 +54,7 @@
             <div class="bg-white p-6 rounded-lg shadow-lg">
                 <h3 class="text-2xl font-bold mb-2">XCAD DEX</h3>
                 <p class="text-gray-600 mb-4">A Web3 platform for trading and swapping tokens, connected to ZilPay wallet.</p>
-                <p><strong>Technologies:</strong> NEXT.js, Redux, Material UI</p>
+                <p><strong>Technologies:</strong> TypeScript, NEXT.js, Redux, Material UI</p>
                 <a href="https://swap.xcadnetwork.com/" class="text-blue-500 hover:underline" target="_blank">Live Demo</a>
             </div>
 
@@ -89,8 +90,8 @@
             <!-- Project 8: Decentralized News Portal System -->
             <div class="bg-white p-6 rounded-lg shadow-lg">
                 <h3 class="text-2xl font-bold mb-2">Decentralized News Portal System (MSc Final Project)</h3>
-                <p class="text-gray-600 mb-4">A Web3 decentralized news platform with blockchain-based authentication, smart contract governance, token rewards, and decentralized storage using IPFS and Pinata.</p>
-                <p><strong>Technologies:</strong> Next.js, Node.js, Solidity, IPFS, Ethereum</p>
+                <p class="text-gray-600 mb-4">A Web3 decentralized news platform with blockchain-based authentication, smart contract governance, token rewards, and decentralized storage using IPFS.</p>
+                <p><strong>Technologies:</strong> TypeScript, Next.js, Node.js, Solidity, IPFS, Ethereum</p>
             </div>
 
         </div>
